2021-06-14 Philipp Klaus Krause <pkk AT spth.de>

	* historygraphs/dhrystone-z80,
	  historygraphs/Makefile,
	  historygraphs/*.svg:
	  Add Dhrystone size graph for z80.

2021-05-07 Philipp Klaus Krause <pkk AT spth.de>

	* historygraphs/Makefile,
	  historygraphs/*.svg:
	  Update graphs.

2021-05-02 Philipp Klaus Krause <pkk AT spth.de>

	* historygraphs/*
	  stdcbench and Coremark graphs for r3ka.

2021-04-24 Philipp Klaus Krause <pkk AT spth.de>

	* historygraphs/Makefile,
	  coremark-1.0-r3ka.patch,
	  coremark-1.0-stm8.patch,
	  coremark-r3ka-scoretable.p,
	  coremark-r3ka-sizetable.p:
	  Infrastructure for r3ka Coremark graphs.

2021-04-20 Philipp Klaus Krause <pkk AT spth.de>

	* historygraphs/*:
	  r3ka Whetstone and Dhrystone graphs.

2021-04-10 Philipp Klaus Krause <pkk AT spth.de>

	* historygraphs/Makefile,
	  historygraphs/*.svg:
	  Update graphs.

2020-05-30 Philipp Klaus Krause <pkk AT spth.de>

	* historygraphs/Makefile,
	  historygraphs/*.svg:
	  Update graphs.

2020-01-30 Philipp Klaus Krause <pkk AT spth.de>

	* historygraphs/Makefile,
	  historygraphs/*.svg:
	  Update graphs.

2019-12-30 Philipp Klaus Krause <pkk AT spth.de>

	* historygraphs/Makefile,
	  historygraphs/*.svg:
	  Update graphs.

2019-06-09 Philipp Klaus Krause <pkk AT spth.de>

	* historygraphs/Makefile,
	  historygraphs/*.p,
	  historygraphs/*.svg:
	  Update graphs.

2019-04-06 Philipp Klaus Krause <pkk AT spth.de>

	* historygraphs/Makefile,
	  historygraphs/stdcbench-mcs51-scoretable.p,
	  historygraphs/*.svg:
	  Update graphs.

2019-03-18 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* historygraphs/Makefile,
	  historygraphs/*.svg:
	  Update graphs.

2018-11-15 Philipp Klaus Krause <pkk AT spth.de>

	* historygraphs/coremark-stm8-score.svg,
	  historygraphs/stdcbench-0.6-mcs51.patch,
	  historygraphs/stdcbench-0.6-stm8.patch,
	  historygraphs/stdcbench-mcs51-size.svg,
	  historygraphs/stdcbench-mcs51-sizetable.p,
	  historygraphs/Makefile,