@@ -1,107 +1,0 @@
-/* GPIO */
-#define PA_ODR *(unsigned char*)0x5000
-#define PA_IDR *(unsigned char*)0x5001
-#define PA_DDR *(unsigned char*)0x5002
-#define PA_CR1 *(unsigned char*)0x5003
-#define PA_CR2 *(unsigned char*)0x5004
-
-#define PB_ODR *(unsigned char*)0x5005
-#define PB_IDR *(unsigned char*)0x5006
-#define PB_DDR *(unsigned char*)0x5007
-#define PB_CR1 *(unsigned char*)0x5008
-#define PB_CR2 *(unsigned char*)0x5009
-
-#define PC_ODR *(unsigned char*)0x500A
-#define PC_IDR *(unsigned char*)0x500B
-#define PC_DDR *(unsigned char*)0x500C
-#define PC_CR1 *(unsigned char*)0x500D
-#define PC_CR2 *(unsigned char*)0x500E
-
-#define PD_ODR *(unsigned char*)0x500F
-#define PD_IDR *(unsigned char*)0x5010
-#define PD_DDR *(unsigned char*)0x5011
-#define PD_CR1 *(unsigned char*)0x5012
-#define PD_CR2 *(unsigned char*)0x5013
-
-#define PE_ODR *(unsigned char*)0x5014
-#define PE_IDR *(unsigned char*)0x5015
-#define PE_DDR *(unsigned char*)0x5016
-#define PE_CR1 *(unsigned char*)0x5017
-#define PE_CR2 *(unsigned char*)0x5018
-
-#define PF_ODR *(unsigned char*)0x5019
-#define PF_IDR *(unsigned char*)0x501A
-#define PF_DDR *(unsigned char*)0x501B
-#define PF_CR1 *(unsigned char*)0x501C
-#define PF_CR2 *(unsigned char*)0x501D
-
-/* CLOCK */
-#define CLK_DIVR	*(unsigned char*)0x50C0
-#define CLK_CRTCR	*(unsigned char*)0x50C1
-#define CLK_ICKR	*(unsigned char*)0x50C2
-#define CLK_PCKENR1	*(unsigned char*)0x50C3
-#define CLK_PCKENR2	*(unsigned char*)0x50C4
-#define CLK_CCOR	*(unsigned char*)0x50C5
-#define CLK_ECKR	*(unsigned char*)0x50C6
-#define CLK_SCSR	*(unsigned char*)0x50C7
-#define CLK_SWR 	*(unsigned char*)0x50C8
-#define CLK_SWCR	*(unsigned char*)0x50C9
-#define CLK_CSSR	*(unsigned char*)0x50CA
-#define CLK_CBEEPR	*(unsigned char*)0x50CB
-#define CLK_HSICALR	*(unsigned char*)0x50CC
-#define CLK_HSITRIMR	*(unsigned char*)0x50CD
-#define CLK_HSIUNLCKR	*(unsigned char*)0x50CE
-#define CLK_REGCSR	*(unsigned char*)0x50CF
-
-
-/* USART */
-#define USART1_SR *(unsigned char*)0x5230
-#define USART1_DR *(unsigned char*)0x5231
-#define USART1_BRR1 *(unsigned char*)0x5232
-#define USART1_BRR2 *(unsigned char*)0x5233
-#define USART1_CR1 *(unsigned char*)0x5234
-#define USART1_CR2 *(unsigned char*)0x5235
-#define USART1_CR3 *(unsigned char*)0x5236
-#define USART1_CR4 *(unsigned char*)0x5237
-#define USART1_CR5 *(unsigned char*)0x5238
-#define USART1_GTR *(unsigned char*)0x5239
-#define USART1_PSCR *(unsigned char*)0x523A
-
-/* USART_CR1 bits */
-#define USART_CR1_R8 (1 << 7)
-#define USART_CR1_T8 (1 << 6)
-#define USART_CR1_UARTD (1 << 5)
-#define USART_CR1_M (1 << 4)
-#define USART_CR1_WAKE (1 << 3)
-#define USART_CR1_PCEN (1 << 2)
-#define USART_CR1_PS (1 << 1)
-#define USART_CR1_PIEN (1 << 0)
-
-/* USART_CR2 bits */
-#define USART_CR2_TIEN (1 << 7)
-#define USART_CR2_TCIEN (1 << 6)
-#define USART_CR2_RIEN (1 << 5)
-#define USART_CR2_ILIEN (1 << 4)
-#define USART_CR2_TEN (1 << 3)
-#define USART_CR2_REN (1 << 2)
-#define USART_CR2_RWU (1 << 1)
-#define USART_CR2_SBK (1 << 0)
-
-/* USART_CR3 bits */
-#define USART_CR3_LINEN (1 << 6)
-#define USART_CR3_STOP2 (1 << 5)
-#define USART_CR3_STOP1 (1 << 4)
-#define USART_CR3_CLKEN (1 << 3)
-#define USART_CR3_CPOL (1 << 2)
-#define USART_CR3_CPHA (1 << 1)
-#define USART_CR3_LBCL (1 << 0)
-
-/* USART_SR bits */
-#define USART_SR_TXE (1 << 7)
-#define USART_SR_TC (1 << 6)
-#define USART_SR_RXNE (1 << 5)
-#define USART_SR_IDLE (1 << 4)
-#define USART_SR_OR (1 << 3)
-#define USART_SR_NF (1 << 2)
-#define USART_SR_FE (1 << 1)
-#define USART_SR_PE (1 << 0)
